updated basic info and events for SS25

--- a/src/mailinglisten.tex
+++ b/src/mailinglisten.tex
@@ -17,7 +17,7 @@ Anmeldung unter: \url{https://www.fsi.uni-tuebingen.de/mailman/listinfo/versuche
 \fi
 \item \texttt{info-talk}: Diese Liste ist für Themen, die nicht direkt mit dem Studium zu tun haben, aber dennoch von Interesse sein können.\\
 Anmeldung unter: \url{https://www.fsi.uni-tuebingen.de/mailman/listinfo/info-talk}.
-\item \texttt{info-jobs}: Für bezahlte Angebote von HiWi\footnote{wissenschaftliche/studentische Hilfskraft}-Jobs, Praktika sowie  Werksstudentenjobs.\\
+\item \texttt{info-jobs}: Für bezahlte Angebote von Minijobs, Praktika sowie  Werksstudentenjobs.\\
 Anmeldung unter: \url{https://www.fsi.uni-tuebingen.de/mailman/listinfo/info-jobs}.
 \item \texttt{coding}: Hackathons und andere Veranstaltungen zum Coden.\\
 Anmeldung unter: \url{https://www.fsi.uni-tuebingen.de/mailman/listinfo/coding}.
