--- a/src/config.tex
+++ b/src/config.tex
@@ -5,27 +5,27 @@
 % 1. Professoren für Mathe und Info eintragen
 % Titel mit eintragen, damit man in den Terminen nicht If-en muss falls Britta Mathe hält
 \newcommand{\Matheprof}{Prof. Eckstein}
-\newcommand{\Infoprof}{Prof. Grust}
+\newcommand{\Infoprof}{Prof. Lensch}
 
 % 2. Ticketpreise anpassen
-% Link WS23 https://www.naldo.de/tickets/semesterticket/
-\newcommand{\semesterticketpreis}{141,90}
+% Link SS25 https://www.naldo.de/tickets/semesterticket/
+\newcommand{\semesterticketpreis}{153,10}
 % https://www.naldo.de/tickets/dticket-jugendbw-studierende/
-\newcommand{\jugendticketbwpreis}{153,70}
+\newcommand{\jugendticketbwpreis}{236,52}
 % https://www.swtue.de/oepnv/tickets/deutschlandticket-fuer-uebersicht.html
-\newcommand{\detickettuepreis}{34,00}
+\newcommand{\detickettuepreis}{45,00}
 
-% Link WS24 https://uni-tuebingen.de/fakultaeten/mathematisch-naturwissenschaftliche-fakultaet/fachbereiche/informatik/studium/studienbeginn/mathematischer-vorbereitungskurs/
+% Link SS25 https://uni-tuebingen.de/fakultaeten/mathematisch-naturwissenschaftliche-fakultaet/fachbereiche/informatik/studium/studienbeginn/mathematischer-vorbereitungskurs/
 % 3. Mathe Vorkurs
-\newcommand{\matheanmeldung}{26.09.} 		      % Anmeldeschluss (ohne Jahr, mit Punkt am Ende. Bsp.: 31.03.)
-\newcommand{\mathedatum}{Dienstag, 01. Oktober}     % Beginn (Wochentag, Tag. Monat)
-\newcommand{\mathkontakt}{alfredo.cantarella@uni-tuebingen.de}
+\newcommand{\matheanmeldung}{28.03.} 		      % Anmeldeschluss (ohne Jahr, mit Punkt am Ende. Bsp.: 31.03.)
+\newcommand{\mathedatum}{Dienstag, 01. April}             % Beginn (Wochentag, Tag. Monat)
+\newcommand{\mathkontakt}{britta.dorn@uni-tuebingen.de} 
 
 
 % 4. Anmeldeschluss Informatik Vorkurs für Lebenswissenschaftler (BioInfo Master Variante B ohne Jahr, mit Punkt)
 % Link WS24 https://uni-tuebingen.de/de/215092
 
-\newcommand{\bioinfoAnmeldung}{16.09.}		     % Anmeldeschluss (ohne Jahr, mit Punkt am Ende. Bsp.: 31.03.)
-\newcommand{\bioinfoDatum}{Montag, 23. September} % Beginn (Wochentag, Tag. Monat)
+\newcommand{\bioinfoAnmeldung}{17.03.}		     % Anmeldeschluss (ohne Jahr, mit Punkt am Ende. Bsp.: 31.03.)
+\newcommand{\bioinfoDatum}{Montag, 31. März} % Beginn (Wochentag, Tag. Monat)
 \newcommand{\bioinfoKontakt}{philipp.thiel@uni-tuebingen.de}
 
