--- a/stundenplaene/stpl_informatik-bsc_SS.tex
+++ b/stundenplaene/stpl_informatik-bsc_SS.tex
@@ -6,18 +6,18 @@ Semester neben der Informatikvorlesung auch eine gute Portion Mathe.
     \resizebox{\textwidth}{!}{
     \begin{tabular}{|c|c|c|c|c|c|}
        \hline
-       Zeit     & Montag                   & Dienstag                   & Mittwoch      & Donnerstag               & Freitag \\ \hline
-       08 -- 09 &                          & Technische Informatik II   &               &                          &         \\ \cline{1-2} \cline{4-6}
-       09 -- 10 &                          & (Prof. Menth)              &               &                          &         \\ \hline
-       10 -- 11 & Mathematik II            &                            & Mathematik II &                          &         \\ \cline{1-1} \cline{3-3} \cline{5-6}
-       11 -- 12 & (\Matheprof)             &                            & (\Matheprof)  &                          &         \\ \hline
-       12 -- 13 &                          &                            &               &                          &         \\ \cline{1-3} \cline{5-6}
-       13 -- 14 &                          &                            & Mathe         &                          &         \\ \cline{1-3} \cline{5-6}
-       14 -- 15 &                          & Praktische Informatik II   & Rechenzentrum & Praktische Informatik II &         \\ \cline{1-2} \cline{6-6}
-       15 -- 16 &                          & (\Infoprof)                & (ab 24.04.)   & (\Infoprof)              &         \\ \cline{1-3} \cline{5-6}
-       16 -- 17 & Technische               &                            &               &                          &         \\ \cline{1-1} \cline{3-3} \cline{5-6}
-       17 -- 18 & Informatik II            &                            &               &                          &         \\ \cline{1-1} \cline{3-6}
-       18 -- 19 & (Prof. Menth)            &                            &               &                          &         \\ \hline
+       Zeit        & Montag                   	& Dienstag                   		& Mittwoch     	 & Donnerstag               		& Freitag \\ \hline
+       08 -- 09 &                          	& Technische Informatik II   	&              	     	&                          			&         \\ \cline{1-2} \cline{4-6}
+       09 -- 10 &                          	& (Prof. Menth)              	&               		&                         			 &         \\ \hline
+       10 -- 11 & Mathematik II            &                           	 	& Mathematik II 	&                         			&         \\ \cline{1-1} \cline{3-3} \cline{5-6}
+       11 -- 12 & (\Matheprof)             &                            		& (\Matheprof)  	&                          			&         \\ \hline
+       12 -- 13 &                          	&                            		&               		&                          			&         \\ \hline
+       13 -- 14 &                          	&                           		&	     	    	&                         		 	&         \\ \hline
+       14 -- 15 &                          	& Praktische Informatik II   	& Mathe 		& Praktische Informatik II	&         \\ \cline{1-2} \cline{6-6}
+       15 -- 16 &                          	& (\Infoprof)                		& Rechenzentrum& (\Infoprof)              		&         \\ \cline{1-3} \cline{5-6}
+       16 -- 17 & Technische              	&                            		& (ab 23.04.)         &                          		&         \\ \cline{1-1} \cline{3-3} \cline{5-6}	
+       17 -- 18 & Informatik II            	&                            		&           		&                         			&         \\ \cline{1-1} \cline{3-6}
+       18 -- 19 & (Prof. Menth)            	&                            		&           		&                          			&         \\ \hline
     \end{tabular}
     }
 
@@ -47,15 +47,15 @@ Semester neben der Informatikvorlesung auch eine gute Portion Mathe.
 Vollständiger Name: Mathematik für Informatik 2: Lineare Algebra\\
 Dieses Semester wird die Vorlesung im Hörsaal N7 auf der Morgenstelle stattfinden.
 Zusätzlich zur Vorlesung findet ein Tutorium statt. \\
-Ab dem 24.04. findet mittwochs das Rechenzentrum statt. Hier können Studierende gemeinsam die Aufgaben und Inhalte der Vorlesung diskutieren,
+Ab dem 23.04. findet mittwochs das Rechenzentrum statt. Hier können Studierende gemeinsam die Aufgaben und Inhalte der Vorlesung diskutieren,
 wobei auch Tutorinnen und Tutoren anwesend sein werden. Die Teilnahme am Rechenzentrum ist freiwillig.\\
 
 \textbf{Info 2}:\\
 Vollständiger Name: Praktische Informatik 2: Imperative und objektorientierte Programmierung\\
-Dieses Semester wird die Vorlesung wieder in Präsenz im Hörsaal N7 auf der Morgenstelle stattfinden.
-Zusätzlich werden Tutorien in Präsenz stattfinden.
+Dieses Semester wird die Vorlesung im Hörsaal N7 auf der Morgenstelle stattfinden.
+Zusätzlich werden Tutorien stattfinden.
 Die Zeiten für die Tutorien werden innerhalb der ersten Woche in den Vorlesungen bekannt gegeben.\\
-% Es wird für die Mathe II und die Info II auch noch freiwillige Zusatz-Tutorium und Einführungskurse geben.\\
+% Es wird für die Mathe II und die Info II auch noch freiwillige Zusatz-Tutorium und Einführungskurse geben.\\ TODO möglicherweise streichen
 
 \textbf{üBK}:\\
 Im Studienplan wird empfohlen eine übK\footnote{überfachlich berufsfeldorientierte Kompetenzen, in Zukunft auch Liberal Education genannt}
@@ -63,3 +63,4 @@ mit 3 LP zu belegen. Hier ist dir völlig freigestellt was du belegst, solange e
 Veranstaltung von gewissen Fächern (u.a. Medizin, Phsychologie) lassen sich jedoch nur hören, wenn du dieses als Schwerpunktfach gewählt hast.
 Hierdurch verlierst du jedoch die Freiheit der übK und darfst nur Vorlesungen aus diesen Fächern hören. Näheres erfährst du bei der fachspezifischen Begrüßung.
 
+\pagebreak
