--- a/stundenplaene/stpl_msc.tex
+++ b/stundenplaene/stpl_msc.tex
@@ -1,7 +1,7 @@
 Im Master kannst du deinen Stundenplan relativ frei zusammenstellen.
 
 \iflehramt
-	Im Wahlpflichtbereich musst Veranstaltungen aus den Wahlpflichtbereichen des B.Sc. Informatik oder des M.Sc. Informatik belegen. 
+	Im Wahlpflichtbereich musst du Veranstaltungen aus den Wahlpflichtbereichen des B.Sc. Informatik oder des M.Sc. Informatik belegen. 
 	Welche Veranstltungen dich interessieren und damit für dich in Frage kommen kannst du dem Modulhandbuch (\url{http://uni-tuebingen.de/de/74348}) oder Alma (\url{https://alma.uni-tuebingen.de}) entnehmen.
 \else
 	Wichtig ist dabei nur, dass du alle Wahlpflichtbereiche entsprechend deiner Prüfungsordnung abdeckst,
