update dates for kneipentour

--- a/src/termine.tex
+++ b/src/termine.tex
@@ -201,34 +201,34 @@ Der Treffpunkt ist auf der Neckarinsel.\\
 
 % Kneipentour 1 % TODO Uhrzeit
 \ifml
-    \item[Pub Crawl 1 -- TBA]~\\ %-- Friday, April 11th \YEAR, ca. 19:00 Uhr, Stiftskirche]~\\
+    \item[Pub Crawl 1 -- Friday, April 11th \YEAR, ca. 19:00 Uhr]~\\
     Tübingen is a town full of small pubs and bars that characterize the nightlife.
     To calm down from the stress of this information-filled day, we'd like to invite you to go bar-hopping with us.
     We'll divide up into small groups and visit the different bars in the historic town center.
-    Please bring enough cash, most places we will visit don't accept cards (\emph{none whatsoever}). \\
-    \seticon{faBus}~\textbf{bus stop:} Neckarbrücke or Nonnenhaus (lines 1--21)
+    Please bring enough cash, most places we will visit don't accept cards (\emph{none whatsoever}). 
+    %\seticon{faBus}~\textbf{bus stop:} Neckarbrücke or Nonnenhaus (lines 1--21)
 \else
-    \item[Kneipentour 1 -- TBA]~\\  %-- Freitag, 11. April \YEAR, ca. 19:00 Uhr, Stiftskirche]~\\
+    \item[Kneipentour 1 -- Freitag, 11. April \YEAR, ca. 19:00 Uhr]~\\
     Tübingen ist übersät mit kleinen Kneipen und Bars, die das Nachtleben maßgeblich bestimmen.
     Um den Stress der ersten Veranstaltungen etwas sacken zu lassen, laden wir dich zu einer ausgiebigen Kneipentour ein,
     bei der wir in Kleingruppen die verschiedenen Lokalitäten der Tübinger Altstadt besuchen.
-    Bitte bringe genügend Bargeld mit, man kann in fast keiner der Tübinger Bars mit EC-Karte zahlen! -- Volksbanken und Sparkassen finden sich bei Bedarf in der Stadt.\\
-   \seticon{faBus}~\textbf{Bushaltestelle:} Neckarbrücke oder Nonnenhaus (Linien 1--21)
+    Bitte bringe genügend Bargeld mit, man kann in fast keiner der Tübinger Bars mit EC-Karte zahlen! -- Volksbanken und Sparkassen finden sich bei Bedarf in der Stadt.
+   %\seticon{faBus}~\textbf{Bushaltestelle:} Neckarbrücke oder Nonnenhaus (Linien 1--21)
 \fi
 
 % Kneipentour 2 % TODO Uhrzeit
 \ifml
-\item[Pub Crawl 2  -- TBA]~\\  %-- Tuesday, April 15th \YEAR, ca. 19:00 Uhr, Stiftskirche]~\\
+\item[Pub Crawl 2  -- Tuesday, April 15th \YEAR, ca. 19:00 Uhr]~\\
     Ready for round two? Join us for another pub crawl through Tübingen's best spots.
     We'll split into smaller groups again and visit the different bars in the historic town center.
-    Please bring enough cash, most places we will visit don't accept cards (\emph{none whatsoever}).\\
-   \seticon{faBus}~\textbf{bus stop:} Neckarbrücke or Nonnenhaus (lines 1--21)
+    Please bring enough cash, most places we will visit don't accept cards (\emph{none whatsoever}).
+   %\seticon{faBus}~\textbf{bus stop:} Neckarbrücke or Nonnenhaus (lines 1--21)
 \else
-\item[Kneipentour 2  -- TBA]~\\  %-- Dienstag, 15. April \YEAR, ca. 19:00 Uhr, Stiftskirche]~\\
+\item[Kneipentour 2  -- Dienstag, 15. April \YEAR, ca. 19:00 Uhr]~\\
     Bereit für Runde Zwei? Komm mit auf eine weitere Kneipentour durch die besten Kneipen Tübingens.
     Wir werden uns wieder in kleinere Gruppen aufteilen und die verschiedenen Bars in der Altstadt besuchen.
-    Bitte bringe genügend Bargeld mit, man kann in fast keiner der Tübinger Bars mit EC-Karte zahlen! -- Volksbanken und Sparkassen finden sich bei Bedarf in der Stadt.\\
-   \seticon{faBus}~\textbf{Bushaltestelle:} Neckarbrücke oder Nonnenhaus (Linien 1--21)
+    Bitte bringe genügend Bargeld mit, man kann in fast keiner der Tübinger Bars mit EC-Karte zahlen! -- Volksbanken und Sparkassen finden sich bei Bedarf in der Stadt.
+   %\seticon{faBus}~\textbf{Bushaltestelle:} Neckarbrücke oder Nonnenhaus (Linien 1--21)
 \fi
 
 % Nur damit die Seite richtig gebrochen wird.
@@ -260,11 +260,12 @@ Der Treffpunkt ist auf der Neckarinsel.\\
 
 % Frühstück
 \ifbachelor
-    \item[Frühstück -- Freitag, 11. April \YEAR, 10:00 Uhr, Mensa Morgenstelle]\ \\
-    Wir laden dich an diesem Morgen zu einem gemütlichen Frühstück ein! Dabei erfährst du einiges über die Uni, die Fachschaft und was dich in den nächsten Monaten erwartet -- auch im Gespräch mit älteren Studierenden.
-    Danach machen wir eine Führung über die Morgenstelle, damit du die wichtigsten Räume und Hörsäle kennenlernst.
-    Wenn du Lust hast, kannst du anschließend ab 11:45 Uhr das Mensaessen ausprobieren.\\
-    \seticon{faBus}~\textbf{Bushaltestelle:} BG Unfallklinik (Linien 5, 13, 14, 17, 18, 19, X15)
+    \item[Frühstück -- Freitag, 11. April \YEAR, 10:00 Uhr, Sand]\ \\
+    Wir laden dich an diesem Morgen zu einem gemütlichen Frühstück ein! Dabei erfährst du einiges über die Uni, die Fachschaft und was dich in den nächsten Monaten erwartet -- auch im Gespräch mit älteren Studierenden.\\
+    %Danach machen wir eine Führung über die Morgenstelle, damit du die wichtigsten Räume und Hörsäle kennenlernst.
+    %Wenn du Lust hast, kannst du anschließend ab 11:45 Uhr das Mensaessen ausprobieren.\\
+    %\seticon{faBus}~\textbf{Bushaltestelle:} BG Unfallklinik (Linien 5, 13, 14, 17, 18, 19, X15)
+     \seticon{faBus}~\textbf{Bushaltestelle:} Sand Drosselweg (Linien 2 \& 6)
 \fi
 
 % %Mastercafé
